Wed May 25 17:11:34 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (rb_scan_args_validate): move failed
	  condition to the terminal.  [ruby-core:75714] [Bug #12426]

Wed May 25 13:13:37 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* regcomp.c: remove condition for debug output because prelude
	  doesn't use regexp now.

Wed May 25 13:10:30 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* regcomp.c (compile_length_tree): return error code immediately
	  if compile_length_tree raised error [Bug #12418]

Wed May 25 08:01:39 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/unicode.c: Fix flag error for switch from titlecase to lowercase.

	* test/ruby/enc/test_case_mapping.rb: Tests for above error.

Wed May 25 01:13:55 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* ext/openssl/ossl_pkey_ec.c (ec_key_new_from_group): Create a new
	  EC_KEY on given EC group. Extracted from ossl_ec_key_initialize().
	  (ossl_ec_key_s_generate): Added. Create a new EC instance and
	  generate a random private and public key.
	  (ossl_ec_key_initialize): Use ec_key_new_from_group().
	  (Init_ossl_ec): Define the new method EC.generate. This change is
	  for consistency with other PKey types.  [ruby-core:45541] [Bug #6567]

	* test/openssl/test_pkey_ec.rb: Test that EC.generate works.

Wed May 25 00:37:16 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* ext/openssl/ossl_pkey_ec.c (ossl_ec_key_generate_key): Fix up RDoc.
	  (Init_ossl_ec): Rename EC#generate_key to EC#generate_key!. Make the
	  old name an alias of #generate_key!. This change is for consistency
	  with other PKey types.  [ruby-core:45541] [Bug #6567]

	* test/openssl/test_pkey_ec.rb: Use EC#generate_key! instead of
	  EC#generate_key.

Wed May 25 00:23:05 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (rb_scan_args_set): check the arity after
	  adjusting argc for an option hash, for optimization in simpler
	  cases.

Wed May 25 00:21:52 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
