@@ -1,3 +1,7 @@
+Wed May 25 17:13:35 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* class.c (rb_scan_args): merge code for n_trail.
+
 Wed May 25 17:11:34 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* include/ruby/ruby.h (rb_scan_args_validate): move failed
